Improve documentation in readme and cli
Switches to the urfave/cli/v2 framework for improved cli paramenter
documentation. This commit also updates the README.md to make the first
usage of this small cli even easier.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
 
       # Build
       - name: Build project
-        run: 'go build'
+        run: './scripts/build.sh'
 
       # Release binaries
       - name: Release
